Add Blockbench 5.1 animation runtime